--- a/404.md
+++ b/404.md
@@ -1,8 +1,15 @@
 ---
-title: "Page Not Found"
-excerpt: "Page not found. Your pixels are in another canvas."
-sitemap: false
+layout: single
 permalink: /404.html
+title: "Page not found. Your pixels are in another canvas."
+excerpt: "A quick start guide."
+sidebar:
+    nav: docs
+toc: true
+toc_sticky: true
+mathjax: true
+sitemap: false
 ---
+
 
 Sorry, but the page you were trying to view does not exist.
