--- a/_Examples/Ex_2_MullerBrownPotential.ipynb
+++ b/_Examples/Ex_2_MullerBrownPotential.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we add the path of the `solscape-1.0` directory to the system path."
+    "First, we add the path of the `soluscape-1.0` directory to the system path."
    ]
   },
   {
@@ -30,7 +30,7 @@
     "import sys\n",
     "import os\n",
     "\n",
-    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..', 'solscape-1.0')))\n"
+    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..', 'soluscape-1.0')))\n"
    ]
   },
   {
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from solscape import Landscape\n",
+    "from soluscape import Landscape\n",
     "import numpy as np\n",
     "\n",
     "# import packages needed"
