--- a/gallery/Ex_1_Butterfly.ipynb
+++ b/gallery/Ex_1_Butterfly.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -304,10 +304,10 @@
    ],
    "source": [
     "MyLandscape = Landscape(MaxIndex=k, AutoGrad=True, EnergyFunction=energyfunction, \n",
-    "                        EigenMethod='euler', EigenMaxIter=1, InitialPoint=x0, \n",
-    "                        TimeStep=dt, Acceleration=acceme, MaxIter=maxiter, \n",
-    "                        EigenCombination='all', PerturbationNumber=1, \n",
-    "                        PerturbationRadius=1e-2, Verbose=True, ReportInterval=100)\n",
+    "\t\t\t\t\t\tEigenMethod='euler', EigenMaxIter=1, InitialPoint=x0, \n",
+    "\t\t\t\t\t\tTimeStep=dt, Acceleration=acceme, MaxIter=maxiter, \n",
+    "\t\t\t\t\t\tEigenCombination='all', PerturbationNumber=1, \n",
+    "\t\t\t\t\t\tPerturbationRadius=1e-2, Verbose=True, ReportInterval=100)\n",
     "# Instantiation\n",
     "MyLandscape.Run()\n",
     "# Calculate"
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,14 +387,14 @@
     "\n",
     "detail = MyLandscape.DetailRecord\n",
     "output = {\n",
-    "            \"Start ID\": [row[1] for row in detail],\n",
-    "            \"End ID\": [row[0] for row in detail],\n",
-    "            \"Path Positions\": [row[2].tolist() for row in detail],\n",
-    "            \"Path Times\": [row[3].tolist() for row in detail]\n",
-    "        }\n",
+    "\t\t\t\"Start ID\": [row[1] for row in detail],\n",
+    "\t\t\t\"End ID\": [row[0] for row in detail],\n",
+    "\t\t\t\"Path Positions\": [row[2].tolist() for row in detail],\n",
+    "\t\t\t\"Path Times\": [row[3].tolist() for row in detail]\n",
+    "\t\t}\n",
     "\n",
     "with open('output\\Ex_ButterflyDetail.json', 'w') as f:\n",
-    "    json.dump(output, f)"
+    "\tjson.dump(output, f)"
    ]
   },
   {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,117 +415,117 @@
     "from matplotlib.colors import Colormap\n",
     "\n",
     "def animateSL(fig: plt.Figure,\n",
-    "              ax: plt.Axes,\n",
-    "              saddleinfo: dict,\n",
-    "              trajinfo: dict,\n",
-    "              ColorsMI: Colormap = plt.get_cmap(\"tab10\"),\n",
-    "              ColorTraj: list|str = \"blue\",\n",
-    "              dt_per_frame: float = 0.2,\n",
-    "              fps: int = None):\n",
-    "    IDs: list[int] = saddleinfo[\"IDs\"] # Tags of saddles\n",
-    "    coords: list[np.ndarray] = saddleinfo[\"coords\"] # Coordinates\n",
-    "    MIs: list[int] = saddleinfo[\"MIs\"] # Morse indices\n",
-    "    parentIDs: list[list[int]] = saddleinfo[\"parentIDs\"] # Parent saddles\n",
+    "\t\t\t  ax: plt.Axes,\n",
+    "\t\t\t  saddleinfo: dict,\n",
+    "\t\t\t  trajinfo: dict,\n",
+    "\t\t\t  ColorsMI: Colormap = plt.get_cmap(\"tab10\"),\n",
+    "\t\t\t  ColorTraj: list|str = \"blue\",\n",
+    "\t\t\t  dt_per_frame: float = 0.2,\n",
+    "\t\t\t  fps: int = None):\n",
+    "\tIDs: list[int] = saddleinfo[\"IDs\"] # Tags of saddles\n",
+    "\tcoords: list[np.ndarray] = saddleinfo[\"coords\"] # Coordinates\n",
+    "\tMIs: list[int] = saddleinfo[\"MIs\"] # Morse indices\n",
+    "\tparentIDs: list[list[int]] = saddleinfo[\"parentIDs\"] # Parent saddles\n",
     "\n",
-    "    trajectories: list[np.ndarray] = trajinfo[\"trajectories\"] # Trajectories\n",
-    "    times: list[np.ndarray] = trajinfo[\"times\"] # times\n",
+    "\ttrajectories: list[np.ndarray] = trajinfo[\"trajectories\"] # Trajectories\n",
+    "\ttimes: list[np.ndarray] = trajinfo[\"times\"] # times\n",
     "\n",
-    "    startIDs: list[int] = trajinfo[\"startIDs\"] # Starting saddle\"s tag\n",
-    "    endIDs: list[int] = trajinfo[\"endIDs\"] # Ending saddle\"s tag\n",
+    "\tstartIDs: list[int] = trajinfo[\"startIDs\"] # Starting saddle\"s tag\n",
+    "\tendIDs: list[int] = trajinfo[\"endIDs\"] # Ending saddle\"s tag\n",
     "\n",
-    "    N_traj = len(trajectories) # Number of trajectories\n",
-    "    assert N_traj == len(times) == len(startIDs) == len(endIDs)\n",
-    "    for i, traj, time in zip(range(N_traj), trajectories, times):\n",
-    "        assert len(traj) == len(time), f\"Different length of {i}-th trajectory and time\"\n",
+    "\tN_traj = len(trajectories) # Number of trajectories\n",
+    "\tassert N_traj == len(times) == len(startIDs) == len(endIDs)\n",
+    "\tfor i, traj, time in zip(range(N_traj), trajectories, times):\n",
+    "\t\tassert len(traj) == len(time), f\"Different length of {i}-th trajectory and time\"\n",
     "\n",
-    "    trajectoriesFrom: list[list[int]] = [[] for _ in range(len(IDs))]\n",
-    "    for i, startID in enumerate(startIDs):\n",
-    "        if startID >= 0:\n",
-    "            trajectoriesFrom[startID].append(i)\n",
+    "\ttrajectoriesFrom: list[list[int]] = [[] for _ in range(len(IDs))]\n",
+    "\tfor i, startID in enumerate(startIDs):\n",
+    "\t\tif startID >= 0:\n",
+    "\t\t\ttrajectoriesFrom[startID].append(i)\n",
     "\n",
-    "    colorSaddle: list[tuple] = [ColorsMI(MI) for MI in MIs]\n",
-    "    if isinstance(ColorTraj, str):\n",
-    "        colorTraj: list[str] = [ColorTraj] * N_traj\n",
+    "\tcolorSaddle: list[tuple] = [ColorsMI(MI) for MI in MIs]\n",
+    "\tif isinstance(ColorTraj, str):\n",
+    "\t\tcolorTraj: list[str] = [ColorTraj] * N_traj\n",
     "\n",
-    "    ZORDER_TRAJ = 100000\n",
-    "    ZORDER_SADDLE = 200000\n",
-    "    ZORDER_TEXT = 300000\n",
+    "\tZORDER_TRAJ = 100000\n",
+    "\tZORDER_SADDLE = 200000\n",
+    "\tZORDER_TEXT = 300000\n",
     "\n",
-    "    if fps is None:\n",
-    "        fps = 1 / dt_per_frame\n",
-    "    \n",
-    "    lentraj = [len(traj) for traj in trajectories]\n",
+    "\tif fps is None:\n",
+    "\t\tfps = 1 / dt_per_frame\n",
+    "\t\n",
+    "\tlentraj = [len(traj) for traj in trajectories]\n",
     "\n",
-    "    saddleArtists = [ax.plot([], [], \"o\", color=colorSaddle[i], zorder=ZORDER_SADDLE)[0] for i in range(len(IDs))]\n",
-    "    trajArtists = [ax.plot([], [], color=colorTraj[i], zorder=ZORDER_TRAJ)[0] for i in range(N_traj)]\n",
-    "    startArtists = [ax.plot([], [], color=colorTraj[i], zorder=ZORDER_TRAJ, linestyle=\"--\")[0] for i in range(N_traj)]\n",
-    "    endArtists = [ax.plot([], [], color=colorTraj[i], zorder=ZORDER_TRAJ, linestyle=\"--\")[0] for i in range(N_traj)]\n",
+    "\tsaddleArtists = [ax.plot([], [], \"o\", color=colorSaddle[i], zorder=ZORDER_SADDLE)[0] for i in range(len(IDs))]\n",
+    "\ttrajArtists = [ax.plot([], [], color=colorTraj[i], zorder=ZORDER_TRAJ)[0] for i in range(N_traj)]\n",
+    "\tstartArtists = [ax.plot([], [], color=colorTraj[i], zorder=ZORDER_TRAJ, linestyle=\"--\")[0] for i in range(N_traj)]\n",
+    "\tendArtists = [ax.plot([], [], color=colorTraj[i], zorder=ZORDER_TRAJ, linestyle=\"--\")[0] for i in range(N_traj)]\n",
     "\n",
-    "    _awakeMoment = np.ones(len(IDs)) * np.inf # Activation moment of each saddle\n",
-    "    _pendingTraj = []\n",
+    "\t_awakeMoment = np.ones(len(IDs)) * np.inf # Activation moment of each saddle\n",
+    "\t_pendingTraj = []\n",
     "\n",
-    "    plotSaddle = lambda id: saddleArtists[id].set_data([coords[id][0]], [coords[id][1]])\n",
-    "    startTraj = lambda i: startArtists[i].set_data([coords[startIDs[i]][0], trajectories[i][0, 0]],\n",
-    "                                                   [coords[startIDs[i]][1], trajectories[i][0, 1]])\n",
-    "    endTraj = lambda i: endArtists[i].set_data([trajectories[i][-1, 0], coords[endIDs[i]][0]],\n",
-    "                                               [trajectories[i][-1, 1], coords[endIDs[i]][1]])\n",
+    "\tplotSaddle = lambda id: saddleArtists[id].set_data([coords[id][0]], [coords[id][1]])\n",
+    "\tstartTraj = lambda i: startArtists[i].set_data([coords[startIDs[i]][0], trajectories[i][0, 0]],\n",
+    "\t\t\t\t\t\t\t\t\t\t\t\t   [coords[startIDs[i]][1], trajectories[i][0, 1]])\n",
+    "\tendTraj = lambda i: endArtists[i].set_data([trajectories[i][-1, 0], coords[endIDs[i]][0]],\n",
+    "\t\t\t\t\t\t\t\t\t\t\t   [trajectories[i][-1, 1], coords[endIDs[i]][1]])\n",
     "\n",
-    "    def init_frame():\n",
-    "        nonlocal _awakeMoment, _pendingTraj\n",
-    "        for id, parentID in enumerate(parentIDs):\n",
-    "            if -1 in parentID:\n",
-    "                plotSaddle(id)\n",
-    "                _awakeMoment[id] = 0.0\n",
-    "                for i in trajectoriesFrom[id]:\n",
-    "                    startTraj(i)\n",
-    "                    _pendingTraj.append(i)\n",
-    "        return saddleArtists + trajArtists + startArtists + endArtists\n",
+    "\tdef init_frame():\n",
+    "\t\tnonlocal _awakeMoment, _pendingTraj\n",
+    "\t\tfor id, parentID in enumerate(parentIDs):\n",
+    "\t\t\tif -1 in parentID:\n",
+    "\t\t\t\tplotSaddle(id)\n",
+    "\t\t\t\t_awakeMoment[id] = 0.0\n",
+    "\t\t\t\tfor i in trajectoriesFrom[id]:\n",
+    "\t\t\t\t\tstartTraj(i)\n",
+    "\t\t\t\t\t_pendingTraj.append(i)\n",
+    "\t\treturn saddleArtists + trajArtists + startArtists + endArtists\n",
     "\n",
-    "    def frame_generator():\n",
-    "        nonlocal _awakeMoment, _pendingTraj\n",
-    "        pointer = np.zeros(N_traj, dtype=int)\n",
-    "        _pendingSaddle = []\n",
-    "        _pendingTraj_temp = []\n",
-    "        current_time = 0.0\n",
-    "        while _pendingTraj:\n",
-    "            current_time += dt_per_frame\n",
-    "            while _pendingTraj or _pendingSaddle:\n",
-    "                if _pendingTraj:\n",
-    "                    i = _pendingTraj.pop(0)\n",
-    "                    startID = startIDs[i]\n",
-    "                    while pointer[i] < lentraj[i] and times[i][pointer[i]] + _awakeMoment[startID] <= current_time:\n",
-    "                        pointer[i] += 1\n",
-    "                    trajArtists[i].set_data(trajectories[i][:pointer[i], 0], trajectories[i][:pointer[i], 1])\n",
-    "                    if pointer[i] == lentraj[i]:\n",
-    "                        endTraj(i)\n",
-    "                        endID = endIDs[i]\n",
-    "                        if not endID in _pendingSaddle:\n",
-    "                            _pendingSaddle.append(endID)\n",
-    "                        if _awakeMoment[endID] > times[i][-1] + _awakeMoment[startID]:\n",
-    "                            _awakeMoment[endID] = times[i][-1] + _awakeMoment[startID]\n",
-    "                            _pendingSaddle.sort(key=lambda id: _awakeMoment[id])\n",
-    "                    else:\n",
-    "                        _pendingTraj_temp.append(i)\n",
-    "                else:\n",
-    "                    id = _pendingSaddle.pop(0)\n",
-    "                    plotSaddle(id)\n",
-    "                    _pendingTraj += trajectoriesFrom[id]\n",
-    "            yield saddleArtists + trajArtists + startArtists + endArtists\n",
-    "            _pendingTraj = _pendingTraj_temp.copy()\n",
-    "            _pendingTraj_temp.clear()\n",
-    "    \n",
-    "    return FuncAnimation(fig,\n",
-    "                         lambda frame: frame,\n",
-    "                         frame_generator,\n",
-    "                         init_frame,\n",
-    "                         blit=True,\n",
-    "                         interval=dt_per_frame * 1000,\n",
-    "                         cache_frame_data=False)"
+    "\tdef frame_generator():\n",
+    "\t\tnonlocal _awakeMoment, _pendingTraj\n",
+    "\t\tpointer = np.zeros(N_traj, dtype=int)\n",
+    "\t\t_pendingSaddle = []\n",
+    "\t\t_pendingTraj_temp = []\n",
+    "\t\tcurrent_time = 0.0\n",
+    "\t\twhile _pendingTraj:\n",
+    "\t\t\tcurrent_time += dt_per_frame\n",
+    "\t\t\twhile _pendingTraj or _pendingSaddle:\n",
+    "\t\t\t\tif _pendingTraj:\n",
+    "\t\t\t\t\ti = _pendingTraj.pop(0)\n",
+    "\t\t\t\t\tstartID = startIDs[i]\n",
+    "\t\t\t\t\twhile pointer[i] < lentraj[i] and times[i][pointer[i]] + _awakeMoment[startID] <= current_time:\n",
+    "\t\t\t\t\t\tpointer[i] += 1\n",
+    "\t\t\t\t\ttrajArtists[i].set_data(trajectories[i][:pointer[i], 0], trajectories[i][:pointer[i], 1])\n",
+    "\t\t\t\t\tif pointer[i] == lentraj[i]:\n",
+    "\t\t\t\t\t\tendTraj(i)\n",
+    "\t\t\t\t\t\tendID = endIDs[i]\n",
+    "\t\t\t\t\t\tif not endID in _pendingSaddle:\n",
+    "\t\t\t\t\t\t\t_pendingSaddle.append(endID)\n",
+    "\t\t\t\t\t\tif _awakeMoment[endID] > times[i][-1] + _awakeMoment[startID]:\n",
+    "\t\t\t\t\t\t\t_awakeMoment[endID] = times[i][-1] + _awakeMoment[startID]\n",
+    "\t\t\t\t\t\t\t_pendingSaddle.sort(key=lambda id: _awakeMoment[id])\n",
+    "\t\t\t\t\telse:\n",
+    "\t\t\t\t\t\t_pendingTraj_temp.append(i)\n",
+    "\t\t\t\telse:\n",
+    "\t\t\t\t\tid = _pendingSaddle.pop(0)\n",
+    "\t\t\t\t\tplotSaddle(id)\n",
+    "\t\t\t\t\t_pendingTraj += trajectoriesFrom[id]\n",
+    "\t\t\tyield saddleArtists + trajArtists + startArtists + endArtists\n",
+    "\t\t\t_pendingTraj = _pendingTraj_temp.copy()\n",
+    "\t\t\t_pendingTraj_temp.clear()\n",
+    "\t\n",
+    "\treturn FuncAnimation(fig,\n",
+    "\t\t\t\t\t\t lambda frame: frame,\n",
+    "\t\t\t\t\t\t frame_generator,\n",
+    "\t\t\t\t\t\t init_frame,\n",
+    "\t\t\t\t\t\t blit=True,\n",
+    "\t\t\t\t\t\t interval=dt_per_frame * 1000,\n",
+    "\t\t\t\t\t\t cache_frame_data=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -555,28 +555,28 @@
     "\n",
     "contourf_args: dict = {\"levels\": 20}\n",
     "if \"levels\" in contourf_args and contourf_args[\"levels\"] >= 0:\n",
-    "    ax.contourf(x, y, z, **contourf_args)"
+    "\tax.contourf(x, y, z, **contourf_args)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(\"output\\Ex_Butterfly.json\", \"r\") as f:\n",
-    "    saddle_data = json.load(f) # Load the data\n",
+    "\tsaddle_data = json.load(f) # Load the data\n",
     "saddleinfo = {\"IDs\": saddle_data[\"SaddleID\"],\n",
-    "              \"coords\": np.array(saddle_data[\"Position\"])[:, :, 0],\n",
-    "              \"MIs\": saddle_data[\"MorseIndex\"],\n",
-    "              \"parentIDs\": saddle_data[\"FatherSet\"]}\n",
+    "\t\t\t  \"coords\": np.array(saddle_data[\"Position\"])[:, :, 0],\n",
+    "\t\t\t  \"MIs\": saddle_data[\"MorseIndex\"],\n",
+    "\t\t\t  \"parentIDs\": saddle_data[\"FatherSet\"]}\n",
     "\n",
     "with open(\"output\\Ex_ButterflyDetail.json\", \"r\") as f:\n",
-    "    traj_data = json.load(f) # Load the data\n",
+    "\ttraj_data = json.load(f) # Load the data\n",
     "trajinfo = {\"trajectories\": [np.array(traj) for traj in traj_data[\"Path Positions\"]],\n",
-    "            \"times\": [time for time in traj_data[\"Path Times\"]],\n",
-    "            \"startIDs\": traj_data[\"Start ID\"],\n",
-    "            \"endIDs\": traj_data[\"End ID\"]}\n",
+    "\t\t\t\"times\": [time for time in traj_data[\"Path Times\"]],\n",
+    "\t\t\t\"startIDs\": traj_data[\"Start ID\"],\n",
+    "\t\t\t\"endIDs\": traj_data[\"End ID\"]}\n",
     "\n",
     "ani = animateSL(fig, ax, saddleinfo, trajinfo, dt_per_frame=0.02)"
    ]
