--- a/gallery/Ex_2_MullerBrownPotential.ipynb
+++ b/gallery/Ex_2_MullerBrownPotential.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -185,8 +185,8 @@
    ],
    "source": [
     "MyLandscape = Landscape(MaxIndex=k, AutoGrad=True, ExactHessian=True, EnergyFunction=MBP_energyfunc, \n",
-    "                        InitialPoint=x0, TimeStep=dt, Acceleration=acceme,\n",
-    "                        EigenStepSize=1e-7, MaxIter=maxiter,EigenMethod='euler', Verbose=True, ReportInterval=100)\n",
+    "\t\t\t\t\t\tInitialPoint=x0, TimeStep=dt, Acceleration=acceme,\n",
+    "\t\t\t\t\t\tEigenStepSize=1e-7, MaxIter=maxiter,EigenMethod='euler', Verbose=True, ReportInterval=100)\n",
     "# Instantiation\n",
     "MyLandscape.Run()\n",
     "# Calculate"
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
    ],
    "source": [
     "MyLandscape.DrawTrajectory(ContourGridNum=100, ContourGridOut=25, DetailedTraj=True)\n",
-    "# Draw the search path. But because of the large dimension, we cannot draw the picture."
+    "# Draw the search path."
    ]
   },
   {
