--- a/gallery/Ex_3_Cubic.ipynb
+++ b/gallery/Ex_3_Cubic.ipynb
@@ -57,13 +57,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "energyfunction=\"\"\n",
     "for i in range(3):\n",
-    "    energyfunction+=str(i+1)+\"*(x\"+str(i+1)+\"**2-1)**2+\"\n",
+    "\tenergyfunction+=str(i+1)+\"*(x\"+str(i+1)+\"**2-1)**2+\"\n",
     "energyfunction=energyfunction[:-1]"
    ]
   },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1263,10 +1263,10 @@
    ],
    "source": [
     "MyLandscape = Landscape(MaxIndex=k, AutoGrad=True, EnergyFunction=energyfunction, InitialPoint=x0, \n",
-    "                        TimeStep=dt, Acceleration=acceme, EigenCombination='all',\n",
-    "                        EigenMethod='euler', BBStep=False, NesterovChoice=neschoice, NesterovRestart=nesres, \n",
-    "                        Momentum=mom, MaxIter=maxiter, Verbose=True, ReportInterval=100, \n",
-    "                        EigenMaxIter=10, PerturbationRadius=1e-2)\n",
+    "\t\t\t\t\t\tTimeStep=dt, Acceleration=acceme, EigenCombination='all',\n",
+    "\t\t\t\t\t\tEigenMethod='euler', BBStep=False, NesterovChoice=neschoice, NesterovRestart=nesres, \n",
+    "\t\t\t\t\t\tMomentum=mom, MaxIter=maxiter, Verbose=True, ReportInterval=100, \n",
+    "\t\t\t\t\t\tEigenMaxIter=10, PerturbationRadius=1e-2)\n",
     "# Instantiation\n",
     "MyLandscape.Run()\n",
     "# Calculate"
@@ -1281,18 +1281,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def proj_func(input):\n",
-    "    output = np.hstack((1.0 * input[:, [0]]+ 1.5 * input[:, [1]], 1.0 * input[:, [0]]+ 2.5 * input[:, [2]]))\n",
-    "    return output"
+    "\toutput = np.hstack((1.0 * input[:, [0]]+ 1.5 * input[:, [1]], 1.0 * input[:, [0]]+ 2.5 * input[:, [2]]))\n",
+    "\treturn output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1315,7 +1315,7 @@
    ],
    "source": [
     "MyLandscape.DrawTrajectory(ContourGridNum=100, ContourGridOut=25, Projection=proj_func)\n",
-    "# Draw the search path. But because of the large dimension, we cannot draw the picture."
+    "# Draw the search path."
    ]
   },
   {
