--- a/gallery/Ex_4_PhaseField.ipynb
+++ b/gallery/Ex_4_PhaseField.ipynb
@@ -67,28 +67,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.ndimage import convolve\n",
     "\n",
     "def gradient_PF(x, opt):\n",
-    "    kappa = opt['kappa']\n",
-    "    n2 = len(x)\n",
-    "    n = int(np.sqrt(n2))\n",
-    "    phi = x.reshape(n, n)\n",
-    "    h = opt['h']\n",
+    "\tkappa = opt['kappa']\n",
+    "\tn2 = len(x)\n",
+    "\tn = int(np.sqrt(n2))\n",
+    "\tphi = x.reshape(n, n)\n",
+    "\th = opt['h']\n",
     "\n",
-    "    D2 = np.array([[0, 1, 0],\n",
-    "                   [1, -4, 1],\n",
-    "                   [0, 1, 0]]) / h**2\n",
+    "\tD2 = np.array([[0, 1, 0],\n",
+    "\t\t\t\t   [1, -4, 1],\n",
+    "\t\t\t\t   [0, 1, 0]]) / h**2\n",
     "\n",
-    "    conv_term = convolve(phi, D2, mode='wrap')\n",
+    "\tconv_term = convolve(phi, D2, mode='wrap')\n",
     "\n",
-    "    F = -(kappa * conv_term + phi - phi**3)\n",
+    "\tF = -(kappa * conv_term + phi - phi**3)\n",
     "\n",
-    "    return F.reshape(n2, 1)\n"
+    "\treturn F.reshape(n2, 1)\n"
    ]
   },
   {
@@ -100,30 +100,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def SameSaddle(x, y):\n",
-    "    n= 64\n",
-    "    A = x.reshape(n,n)\n",
-    "    B = y.reshape(n,n)\n",
-    "    epsilon = 0.05\n",
+    "\tn= 64\n",
+    "\tA = x.reshape(n,n)\n",
+    "\tB = y.reshape(n,n)\n",
+    "\tepsilon = 0.05\n",
     "\n",
-    "    row_indices = np.array([(np.arange(n) - dx) % n for dx in range(n)])\n",
-    "    col_indices = np.array([(np.arange(n) - dy) % n for dy in range(n)])\n",
+    "\trow_indices = np.array([(np.arange(n) - dx) % n for dx in range(n)])\n",
+    "\tcol_indices = np.array([(np.arange(n) - dy) % n for dy in range(n)])\n",
     "\n",
-    "    row_shifted = np.zeros((n, n, n), dtype=B.dtype)\n",
-    "    for dx in range(n):\n",
-    "        row_shifted[dx] = B[row_indices[dx], :]\n",
+    "\trow_shifted = np.zeros((n, n, n), dtype=B.dtype)\n",
+    "\tfor dx in range(n):\n",
+    "\t\trow_shifted[dx] = B[row_indices[dx], :]\n",
     "\n",
-    "    for dx in range(n):\n",
-    "        for dy in range(n):\n",
-    "            shifted_B = row_shifted[dx][:, col_indices[dy]]\n",
-    "            max_diff = np.max(np.abs(A - shifted_B))\n",
-    "            if max_diff <= epsilon:\n",
-    "                return True\n",
-    "    return False\n"
+    "\tfor dx in range(n):\n",
+    "\t\tfor dy in range(n):\n",
+    "\t\t\tshifted_B = row_shifted[dx][:, col_indices[dy]]\n",
+    "\t\t\tmax_diff = np.max(np.abs(A - shifted_B))\n",
+    "\t\t\tif max_diff <= epsilon:\n",
+    "\t\t\t\treturn True\n",
+    "\treturn False\n"
    ]
   },
   {
@@ -135,15 +135,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "N = 64\n",
     "opt = {\n",
-    "    'kappa': 0.02,\n",
-    "    'N': N,\n",
-    "    'h': 1/N,\n",
+    "\t'kappa': 0.02,\n",
+    "\t'N': N,\n",
+    "\t'h': 1/N,\n",
     "}\n",
     "\n",
     "GradFunc = lambda x: gradient_PF(x, opt)\n"
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1724,13 +1724,13 @@
    ],
    "source": [
     "MyLandscape = Landscape(MaxIndex=k, AutoGrad=False, Grad=GradFunc, DimerLength=1e-3, \n",
-    "                        HessianDimerLength=1e-3, EigenStepSize=1e-7, InitialPoint=x0, \n",
-    "                        TimeStep=dt, Acceleration=acceme, SearchArea=1e4, SymmetryCheck=False,\n",
-    "                        Tolerance=1e-4, MaxIndexGap=3, EigenCombination='min',\n",
-    "                        BBStep=True, NesterovChoice=neschoice, NesterovRestart=nesres, \n",
-    "                        Momentum=mom, MaxIter=maxiter, Verbose=True, ReportInterval=10, \n",
-    "                        EigenMaxIter=2, PerturbationNumber=1,\n",
-    "                        SameJudgementMethod=SameSaddle, PerturbationRadius=5.0)\n",
+    "\t\t\t\t\t\tHessianDimerLength=1e-3, EigenStepSize=1e-7, InitialPoint=x0, \n",
+    "\t\t\t\t\t\tTimeStep=dt, Acceleration=acceme, SearchArea=1e4, SymmetryCheck=False,\n",
+    "\t\t\t\t\t\tTolerance=1e-4, MaxIndexGap=3, EigenCombination='min',\n",
+    "\t\t\t\t\t\tBBStep=True, NesterovChoice=neschoice, NesterovRestart=nesres, \n",
+    "\t\t\t\t\t\tMomentum=mom, MaxIter=maxiter, Verbose=True, ReportInterval=10, \n",
+    "\t\t\t\t\t\tEigenMaxIter=2, PerturbationNumber=1,\n",
+    "\t\t\t\t\t\tSameJudgementMethod=SameSaddle, PerturbationRadius=5.0)\n",
     "# Instantiation\n",
     "MyLandscape.Run()\n",
     "# Calculate"
@@ -1774,7 +1774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1782,33 +1782,33 @@
     "from scipy.interpolate import griddata\n",
     "\n",
     "def plot_phi_heatmap(phi_vector, N):\n",
-    "    if len(phi_vector) != N * N:\n",
-    "        raise ValueError(f\"Input shape must be {N * N}, but got {len(phi_vector)}\")\n",
-    "    \n",
-    "    h=1/N\n",
+    "\tif len(phi_vector) != N * N:\n",
+    "\t\traise ValueError(f\"Input shape must be {N * N}, but got {len(phi_vector)}\")\n",
+    "\t\n",
+    "\th=1/N\n",
     "\n",
-    "    x = np.linspace(h/2, 1-h/2, N)\n",
-    "    y = np.linspace(h/2, 1-h/2, N)\n",
-    "    X, Y = np.meshgrid(x, y)\n",
+    "\tx = np.linspace(h/2, 1-h/2, N)\n",
+    "\ty = np.linspace(h/2, 1-h/2, N)\n",
+    "\tX, Y = np.meshgrid(x, y)\n",
     "\n",
-    "    phi = phi_vector.reshape((N, N))\n",
+    "\tphi = phi_vector.reshape((N, N))\n",
     "\n",
-    "    grid_x, grid_y = np.mgrid[0:1:N*10j, 0:1:N*10j] \n",
-    "    grid_phi = griddata((X.flatten(), Y.flatten()), phi.flatten(), (grid_x, grid_y), method='cubic')\n",
+    "\tgrid_x, grid_y = np.mgrid[0:1:N*10j, 0:1:N*10j] \n",
+    "\tgrid_phi = griddata((X.flatten(), Y.flatten()), phi.flatten(), (grid_x, grid_y), method='cubic')\n",
     "\n",
-    "    # Draw heatmap\n",
-    "    plt.figure(figsize=(8, 6))\n",
-    "    plt.imshow(grid_phi, extent=(0, 1, 0, 1), origin='lower', cmap='viridis',vmin=-1, vmax=1)\n",
-    "    plt.colorbar(label='$\\phi$ value')\n",
-    "    plt.title('phase field $\\phi$ heatmap')\n",
-    "    plt.xlabel('x')\n",
-    "    plt.ylabel('y')\n",
-    "    plt.show()"
+    "\t# Draw heatmap\n",
+    "\tplt.figure(figsize=(8, 6))\n",
+    "\tplt.imshow(grid_phi, extent=(0, 1, 0, 1), origin='lower', cmap='viridis',vmin=-1, vmax=1)\n",
+    "\tplt.colorbar(label='$\\phi$ value')\n",
+    "\tplt.title('phase field $\\phi$ heatmap')\n",
+    "\tplt.xlabel('x')\n",
+    "\tplt.ylabel('y')\n",
+    "\tplt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1874,7 +1874,7 @@
    ],
    "source": [
     "for i in range(len(MyLandscape.SaddleList)):\n",
-    "    plot_phi_heatmap(MyLandscape.SaddleList[i][1],N)"
+    "\tplot_phi_heatmap(MyLandscape.SaddleList[i][1],N)"
    ]
   }
  ],
