--- a/gallery/Ex_1_Butterfly.ipynb
+++ b/gallery/Ex_1_Butterfly.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -111,6 +111,7 @@
       "Parameter `EigenStepSize` not specified - using default value 1e-05.\n",
       "Parameter `ExactHessian` not specified - using default value False.\n",
       "Parameter `PrecisionTol` not specified - using default value 1e-05.\n",
+      "Parameter `EigvecUnified` not specified - using default value False.\n",
       "Parameter 'GradientSystem' not provided. Enabling automatic symmetry detection.\n",
       "Parameter 'SymmetryCheck' not provided. Defaulting to True with automatic detection.\n",
       "\n",
@@ -121,16 +122,14 @@
       "Landscape Configuration:\n",
       "------------------------------\n",
       "[Landscape] Current parameters (initialized):\n",
-      "Parameter `SameJudgementMethod` not specified - using default value <function LandscapeCheckParam.<locals>.<lambda> at 0x00000217DDE0B420>.\n",
+      "Parameter `SameJudgementMethod` not specified - using default value <function LandscapeCheckParam.<locals>.<lambda> at 0x0000018B845AA660>.\n",
       "Parameter `PerturbationMethod` not specified - using default value uniform.\n",
       "Parameter `InitialEigenVectors` not specified - using default value None.\n",
       "Parameter `SaveTrajectory` not specified - using default value True.\n",
       "Parameter `MaxIndexGap` not specified - using default value 1.\n",
       "\n",
-      "\n",
       "Start running:\n",
       "------------------------------\n",
-      "\n",
       "\n",
       "\n",
       "\n",
@@ -379,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
