--- a/gallery/Ex_2_MullerBrownPotential.ipynb
+++ b/gallery/Ex_2_MullerBrownPotential.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -115,6 +115,7 @@
       "Parameter `EigenMaxIter` not specified - using default value 10.\n",
       "Parameter `HessianDimerLength` not specified - using default value 1e-05.\n",
       "Parameter `PrecisionTol` not specified - using default value 1e-05.\n",
+      "Parameter `EigvecUnified` not specified - using default value False.\n",
       "Parameter 'GradientSystem' not provided. Enabling automatic symmetry detection.\n",
       "Parameter 'SymmetryCheck' not provided. Defaulting to True with automatic detection.\n",
       "\n",
@@ -125,7 +126,7 @@
       "Landscape Configuration:\n",
       "------------------------------\n",
       "[Landscape] Current parameters (initialized):\n",
-      "Parameter `SameJudgementMethod` not specified - using default value <function LandscapeCheckParam.<locals>.<lambda> at 0x000001F66CADFCE0>.\n",
+      "Parameter `SameJudgementMethod` not specified - using default value <function LandscapeCheckParam.<locals>.<lambda> at 0x000001B399FF3A60>.\n",
       "Parameter `PerturbationMethod` not specified - using default value uniform.\n",
       "Parameter `PerturbationRadius` not specified - using default value 0.0001.\n",
       "Parameter `InitialEigenVectors` not specified - using default value None.\n",
@@ -134,10 +135,8 @@
       "Parameter `MaxIndexGap` not specified - using default value 1.\n",
       "Parameter `EigenCombination` not specified - using default value all.\n",
       "\n",
-      "\n",
       "Start running:\n",
       "------------------------------\n",
-      "\n",
       "\n",
       "\n",
       "\n",
@@ -201,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
