--- a/gallery/Ex_3_Cubic.ipynb
+++ b/gallery/Ex_3_Cubic.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -113,6 +113,7 @@
       "Parameter `EigenStepSize` not specified - using default value 1e-05.\n",
       "Parameter `ExactHessian` not specified - using default value False.\n",
       "Parameter `PrecisionTol` not specified - using default value 1e-05.\n",
+      "Parameter `EigvecUnified` not specified - using default value False.\n",
       "Parameter 'GradientSystem' not provided. Enabling automatic symmetry detection.\n",
       "Parameter 'SymmetryCheck' not provided. Defaulting to True with automatic detection.\n",
       "\n",
@@ -123,17 +124,15 @@
       "Landscape Configuration:\n",
       "------------------------------\n",
       "[Landscape] Current parameters (initialized):\n",
-      "Parameter `SameJudgementMethod` not specified - using default value <function LandscapeCheckParam.<locals>.<lambda> at 0x000001EBFA935DA0>.\n",
+      "Parameter `SameJudgementMethod` not specified - using default value <function LandscapeCheckParam.<locals>.<lambda> at 0x000001F50F8C0220>.\n",
       "Parameter `PerturbationMethod` not specified - using default value uniform.\n",
       "Parameter `InitialEigenVectors` not specified - using default value None.\n",
       "Parameter `PerturbationNumber` not specified - using default value 2.\n",
       "Parameter `SaveTrajectory` not specified - using default value True.\n",
       "Parameter `MaxIndexGap` not specified - using default value 1.\n",
       "\n",
-      "\n",
       "Start running:\n",
       "------------------------------\n",
-      "\n",
       "\n",
       "\n",
       "\n",
@@ -1281,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1292,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
