--- a/gallery/Ex_3_Cubic.ipynb
+++ b/gallery/Ex_3_Cubic.ipynb
@@ -124,7 +124,7 @@
       "Landscape Configuration:\n",
       "------------------------------\n",
       "[Landscape] Current parameters (initialized):\n",
-      "Parameter `SameJudgementMethod` not specified - using default value <function LandscapeCheckParam.<locals>.<lambda> at 0x000001AC392DC0E0>.\n",
+      "Parameter `SameJudgementMethod` not specified - using default value <function LandscapeCheckParam.<locals>.<lambda> at 0x000001DFAD3C7380>.\n",
       "Parameter `PerturbationMethod` not specified - using default value uniform.\n",
       "Parameter `InitialEigenVectors` not specified - using default value None.\n",
       "Parameter `PerturbationNumber` not specified - using default value 2.\n",
@@ -1326,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
