--- a/gallery/Ex_1_Butterfly.ipynb
+++ b/gallery/Ex_1_Butterfly.ipynb
@@ -122,7 +122,7 @@
       "Landscape Configuration:\n",
       "------------------------------\n",
       "[Landscape] Current parameters (initialized):\n",
-      "Parameter `SameJudgementMethod` not specified - using default value <function LandscapeCheckParam.<locals>.<lambda> at 0x000001DC5BA1E520>.\n",
+      "Parameter `SameJudgementMethod` not specified - using default value <function LandscapeCheckParam.<locals>.<lambda> at 0x00000299EAC4A7A0>.\n",
       "Parameter `PerturbationMethod` not specified - using default value uniform.\n",
       "Parameter `InitialEigenVectors` not specified - using default value None.\n",
       "Parameter `SaveTrajectory` not specified - using default value True.\n",
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
