--- a/gallery/Ex_2_MullerBrownPotential.ipynb
+++ b/gallery/Ex_2_MullerBrownPotential.ipynb
@@ -126,7 +126,7 @@
       "Landscape Configuration:\n",
       "------------------------------\n",
       "[Landscape] Current parameters (initialized):\n",
-      "Parameter `SameJudgementMethod` not specified - using default value <function LandscapeCheckParam.<locals>.<lambda> at 0x000001BB3E183A60>.\n",
+      "Parameter `SameJudgementMethod` not specified - using default value <function LandscapeCheckParam.<locals>.<lambda> at 0x00000214103EFB00>.\n",
       "Parameter `PerturbationMethod` not specified - using default value uniform.\n",
       "Parameter `PerturbationRadius` not specified - using default value 0.0001.\n",
       "Parameter `InitialEigenVectors` not specified - using default value None.\n",
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
